--- a/webapp/src/assets/styles/_varibales.less
+++ b/webapp/src/assets/styles/_varibales.less
@@ -1,4 +1,4 @@
-@global-font: 'Open Sans', Arial, sans-serif;
+@global-font: 'Gill Sans', sans-serif;
 @font-size-small: 12px;
 @font-size-medium: 16px;
 @font-size-large: 20px;
