Add problems list

--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -6,5 +6,11 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
     </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="">Вход</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="">Регистрация</a>
+      </li>
   </ul>
 </div>
