--- a/webapp/src/app/pages/main/main.component.html
+++ b/webapp/src/app/pages/main/main.component.html
@@ -1,3 +1,10 @@
 <div class="main">
-  Главная страница
+  <div class="content">
+      <span>Список проблем</span>
+      <div class="problems-list">
+          <app-problem-short></app-problem-short>
+          <app-problem-short></app-problem-short>
+          <app-problem-short></app-problem-short>
+      </div>
+  </div>
 </div>
