--- a/webapp/src/app/pages/main/main.component.html
+++ b/webapp/src/app/pages/main/main.component.html
@@ -2,9 +2,7 @@
   <div class="content">
       <span>Список проблем</span>
       <div class="problems-list">
-          <app-problem-short></app-problem-short>
-          <app-problem-short></app-problem-short>
-          <app-problem-short></app-problem-short>
+          <app-problem-short *ngFor="let problem of problemsList" [problem]="problem"></app-problem-short>
       </div>
   </div>
 </div>
