--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -1,5 +1,6 @@
 <div class="problem-short">
-    <span class="problem-title">
+    <span class="problem-title"
+          [routerLink]="['/problem', problem?.id]">
         {{problem?.title}}
     </span>
     <div class="problem-description">
