--- a/webapp/src/app/components/problem-short/problem-short.component.scss
+++ b/webapp/src/app/components/problem-short/problem-short.component.scss
@@ -11,6 +11,10 @@
   .problem-title {
     font-size: 20px;
     font-weight: bold;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .problem-description {
