--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
     </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="">Вход</a>
+          <a class="nav-link" routerLink="/login" routerLinkActive="active">Вход</a>
       </li>
       <li class="nav-item">
           <a class="nav-link" routerLink="">Регистрация</a>
