--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Вход</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="">Регистрация</a>
+          <a class="nav-link" routerLink="/signup" routerLinkActive="active">Регистрация</a>
       </li>
   </ul>
 </div>
