--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -1,16 +1,22 @@
 <div class="container">
-  <ul class="nav nav-pills nav-fill">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/main" routerLinkActive="active">Главная</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
-    </li>
-      <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active">Вход</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" routerLink="/signup" routerLinkActive="active">Регистрация</a>
-      </li>
-  </ul>
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/main" routerLinkActive="active">Главная</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" *ngIf="!currentUser" routerLink="/login" routerLinkActive="active">Вход</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" *ngIf="currentUser" routerLink="/main" (click)="logout()">Выход</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" *ngIf="currentUser" routerLink="" routerLinkActive="active">Профиль</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" *ngIf="!currentUser" routerLink="/signup" routerLinkActive="active">Регистрация</a>
+        </li>
+    </ul>
 </div>
