--- a/webapp/src/app/pages/signup/signup.component.html
+++ b/webapp/src/app/pages/signup/signup.component.html
@@ -17,11 +17,11 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Пароль</label>
-                    <input type="password" class="form-control" id="password" formControlName="password">
+                    <input type="password" class="form-control" id="password" formControlName="password" [class.error-field]="signupForm.errors?.differentPasswords">
                 </div>
                 <div class="form-group">
                     <label for="repeat-password">Повтор пароля</label>
-                    <input type="password" class="form-control" id="repeat-password" formControlName="passwordConfirmation">
+                    <input type="password" class="form-control" id="repeat-password" formControlName="passwordConfirmation" [class.error-field]="signupForm.errors?.differentPasswords">
                 </div>
                 <button [disabled]="!signupForm.valid" (click)="signup()" class="btn btn-primary">Зарегистрироваться
                 </button>
