--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -4,6 +4,6 @@
         {{problem?.title}}
     </span>
     <div class="problem-description">
-        {{problem?.body}}
+        {{problem?.text}}
     </div>
 </div>
