--- a/webapp/src/app/pages/add-problem/add-problem.component.scss
+++ b/webapp/src/app/pages/add-problem/add-problem.component.scss
@@ -1,3 +1,25 @@
 .add-problem {
   margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  .content {
+    background-color: #e5edf9;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+
+    .form-group > input {
+      width: 400px;
+    }
+
+    #map {
+      width: 100%;
+      height: 480px;
+    }
+  }
+
 }
