--- a/webapp/src/app/pages/problem/problem.component.html
+++ b/webapp/src/app/pages/problem/problem.component.html
@@ -2,7 +2,8 @@
     <div class="content">
         <span class="title">{{problem?.title}}</span>
         <div class="description">
-            {{problem?.body}}
+            {{problem?.text}}
         </div>
+        <div id="map"></div>
     </div>
 </div>
