--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
-            <a class="nav-link" routerLink="/main" routerLinkActive="active">Главная</a>
+            <a class="nav-link" routerLink="/main" routerLinkActive="active">Говнопровод</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
