--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -1,9 +1,12 @@
 <div class="problem-short">
+  <div class="problem-short-image"></div>
+  <div class="problem-short-body">
     <span class="problem-title"
           [routerLink]="['/problem', problem?.id]">
         {{problem?.title}}
     </span>
     <div class="problem-description">
-        {{problem?.text}}
+      {{problem?.text}}
     </div>
+  </div>
 </div>
