--- a/webapp/src/app/components/problem-short/problem-short.component.scss
+++ b/webapp/src/app/components/problem-short/problem-short.component.scss
@@ -1,10 +1,9 @@
 .problem-short {
   width: 70%;
-  border-radius: 4px;
   background-color: #ffffff;
   margin-top: 30px;
   height: 150px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.09);
   padding: 10px;
   overflow: hidden;
 
