--- a/webapp/src/app/pages/main/main.component.scss
+++ b/webapp/src/app/pages/main/main.component.scss
@@ -1,20 +1,108 @@
+.parallax {
+  background-image: url(/assets/images/index-bg.png);
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+
 .main {
-  margin-top: 50px;
   display: flex;
   justify-content: center;
   width: 100%;
 
-  .content {
-    background-color: #e5edf9;
-    width: 70%;
+  //overflow: auto;
+  //height: 100vh;
+  //background-image: url('/assets/images/index-bg.png');
+  //background-size: cover;
+  //background-position: center;
+  .main-inner {
+
+    overflow: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    //background-color: #141414;
 
-    .problems-list {
+    .slide {
+      height: calc(100vh - 60px);
       width: 100%;
+      flex-shrink: 0;
+      //background-image: url(/assets/images/index-bg.png);
+      //background-size: cover;
+      //background-position: center;
+      display: flex;
+
+      .title-text{
+        width: 95%;
+        padding: 23vh 6% 6vh 6%;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 11vh;
+        font-weight: 300;
+        line-height: 1.4;
+        text-transform: uppercase;
+
+        > .btn {
+          padding: 12px;
+          background-color: #bb2c3d;
+          border: none;
+          border-radius: 0;
+          text-transform: uppercase;
+
+          width: 50%;
+          margin: 10px;
+
+        }
+
+        @media(max-width: 720px) {
+          width: 100%;
+          padding: 188px 10px 40px 10px;
+          text-align: center;
+          justify-content: center;
+
+
+          > .btn {
+            width: auto;
+            margin: 0;
+          }
+        }
+      }
+    }
+
+    .content {
+      background-color: #e6e6e6;
+      width: 70%;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      margin-top: 60px;
+
+      border-left: solid 8px rgba(0, 0, 0, 0.25);
+      border-right: solid 8px rgba(0, 0, 0, 0.25);
+      box-sizing: content-box;
+
+      .problems-list {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        app-problem-short {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+      @media(max-width: 720px) {
+        width: 100%;
+      }
     }
   }
 }
