--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -5,6 +5,7 @@
           [routerLink]="['/problem', problem?.id]">
         {{problem?.title}}
     </span>
+    <div class="problem-short-panel"><span>150</span><span>30</span><span class="date-place">21 марта 2019</span></div>
     <div class="problem-description">
       {{problem?.text}}
     </div>
