--- a/webapp/src/app/components/problem-short/problem-short.component.scss
+++ b/webapp/src/app/components/problem-short/problem-short.component.scss
@@ -2,10 +2,32 @@
   width: 70%;
   background-color: #ffffff;
   margin-top: 30px;
-  height: 150px;
+  height: 250px;
   box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.09);
-  padding: 10px;
   overflow: hidden;
+  display: flex;
+
+  .problem-short-image {
+    width: 55%;
+    max-width: 350px;
+    display: flex;
+    align-items: center;
+    background-image: url(http://via.placeholder.com/300);
+    background-size: cover;
+    background-position: center;
+    margin-right: 10px;
+  }
+  .problem-short-body {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .problem-short-panel {
+    font-size: 12px;
+    padding: 10px;
+    display: flex;
+  }
 
   .problem-title {
     font-size: 20px;
