--- a/webapp/src/app/pages/add-problem/add-problem.component.html
+++ b/webapp/src/app/pages/add-problem/add-problem.component.html
@@ -1,5 +1,7 @@
 <div class="add-problem">
     <div class="content">
+        <span class="head">Заметили проблему?</span>
+        <span>Вы можете сообщить нам о проблеме вашего города</span>
         <div class="collapse show" id="collapseExample">
             <form [formGroup]="problemForm">
                 <div class="form-group">
