--- a/webapp/src/app/pages/add-problem/add-problem.component.scss
+++ b/webapp/src/app/pages/add-problem/add-problem.component.scss
@@ -5,17 +5,30 @@
   width: 100%;
 
   .content {
-    background-color: #e5edf9;
+    background-color: #e6e6e6;
+    color: #212529a6;
     width: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
+    border-left: solid 10px rgba(0, 0, 0, 0.1);
+    border-right: solid 10px rgba(0, 0, 0, 0.1);
+    box-sizing: content-box;
 
-    .form-group > input {
-      width: 400px;
+    .head {
+      font-size: 35px;
+      color: #000000;
     }
 
+    .form-group {
+      margin-top: 20px;
+
+      input {
+        width: 800px;
+      }
+
+    }
     #map {
       width: 100%;
       height: 480px;
