--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
             <a class="nav-link" routerLink="/main" routerLinkActive="active">Говнопровод</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
+            <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Сообщить о проблеме</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" *ngIf="!currentUser" routerLink="/login" routerLinkActive="active">Вход</a>
