--- a/webapp/src/app/pages/main/main.component.scss
+++ b/webapp/src/app/pages/main/main.component.scss
@@ -79,14 +79,15 @@
 
     .content {
       background-color: #e6e6e6;
-      width: 70%;
+      width: 75%;
+      min-width: 700px;
       display: flex;
       flex-direction: column;
       align-items: center;
       margin-top: 60px;
 
       border-left: solid 8px rgba(0, 0, 0, 0.25);
-      border-right: solid 8px rgba(0, 0, 0, 0.25);
+      border-right: solid 8px rgba(0, 0, 0, 0.25);box-shadow: 6px -2px 3px 3px rgba(0, 0, 0, 0.34);
       box-sizing: content-box;
 
       .problems-list {
