--- a/webapp/src/app/components/header/header.component.scss
+++ b/webapp/src/app/components/header/header.component.scss
@@ -7,7 +7,7 @@
   background-color: rgba(0,0,0,0.9);
   max-width: unset;
   height: 100px;
-  padding: 18px 0;
+  padding: 30px;
   display: flex;
   align-items: center;
 
