--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -1,6 +1,6 @@
 <div class="problem-short">
   <div class="problem-short-image">
-      <img src="{{images[0]}}" alt="" [routerLink]="['/problem', problem?.id]">
+      <img [src]="images[0]" alt="" [routerLink]="['/problem', problem?.id]">
   </div>
   <div class="problem-short-body">
     <span class="problem-title"
