--- a/webapp/src/app/pages/add-problem/add-problem.component.scss
+++ b/webapp/src/app/pages/add-problem/add-problem.component.scss
@@ -1,3 +1,15 @@
+.parallax {
+  background-image: url(/assets/images/index-bg.png);
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+
 .add-problem {
   margin-top: 120px;
   display: flex;
@@ -12,8 +24,8 @@
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    border-left: solid 10px rgba(0, 0, 0, 0.1);
-    border-right: solid 10px rgba(0, 0, 0, 0.1);
+    border: solid 8px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
     box-sizing: content-box;
 
     .head {
@@ -26,12 +38,25 @@
 
       input {
         width: 800px;
+        border-radius: 0;
+      }
+
+      textarea {
+        border-radius: 0;
       }
 
     }
     #map {
       width: 100%;
-      height: 480px;
+      height: 400px;
+      margin-bottom: 10px;
+    }
+
+    button {
+      align-self: center;
+      background-color: #9f2534;
+      border: none;
+      border-radius: 0;
     }
   }
 
