--- a/webapp/src/app/pages/login/login.component.html
+++ b/webapp/src/app/pages/login/login.component.html
@@ -1,14 +1,32 @@
 <div class="login">
+    <div class="parallax"></div>
     <div class="content">
+        <div class="header">
+            <span>ВХОД</span>
+        </div>
         <div class="login-form">
             <form [formGroup]="loginForm">
                 <div class="form-group">
-                    <label for="email">Почтовый ящик</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" formControlName="email">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-user"></i>
+                            </div>
+                        </div>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                               formControlName="email" placeholder="Адрес электронной почты">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" class="form-control" id="password" formControlName="password">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-lock"></i>
+                            </div>
+                        </div>
+                        <input placeholder="Пароль" type="password" class="form-control" id="password"
+                               formControlName="password">
+                    </div>
                 </div>
                 <button [disabled]="!loginForm.valid" (click)="login()" class="btn btn-primary">Войти</button>
             </form>
