--- a/webapp/src/app/pages/signup/signup.component.html
+++ b/webapp/src/app/pages/signup/signup.component.html
@@ -1,27 +1,64 @@
 <div class="signup">
+    <div class="parallax"></div>
     <div class="content">
+        <div class="header">
+            <span>РЕГИСТРАЦИЯ</span>
+        </div>
         <div class="signup-form">
             <form [formGroup]="signupForm">
                 <div class="form-group">
-                    <label for="last-name">Фамилия</label>
-                    <input type="text" class="form-control" id="last-name" formControlName="lastName">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-pen"></i>
+                            </div>
+                        </div>
+                        <input placeholder="Фамилия" type="text" class="form-control" id="last-name" formControlName="lastName">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="first-name">Имя</label>
-                    <input type="text" class="form-control" id="first-name" formControlName="firstName">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-pen"></i>
+                            </div>
+                        </div>
+                        <input placeholder="Имя" type="text" class="form-control" id="first-name" formControlName="firstName">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="email">Почтовый ящик</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                           formControlName="email">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-user"></i>
+                            </div>
+                        </div>
+                        <input placeholder="Адрес электронной почты" type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                               formControlName="email">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" class="form-control" id="password" formControlName="password" [class.error-field]="signupForm.errors?.differentPasswords">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-lock"></i>
+                            </div>
+                        </div>
+                        <input placeholder="Пароль" type="password" class="form-control" id="password" formControlName="password"
+                               [class.error-field]="signupForm.errors?.differentPasswords">
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="repeat-password">Повтор пароля</label>
-                    <input type="password" class="form-control" id="repeat-password" formControlName="passwordConfirmation" [class.error-field]="signupForm.errors?.differentPasswords">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fas fa-lock"></i>
+                            </div>
+                        </div>
+                        <input placeholder="Повтор пароля" type="password" class="form-control" id="repeat-password"
+                               formControlName="passwordConfirmation"
+                               [class.error-field]="signupForm.errors?.differentPasswords">
+                    </div>
                 </div>
                 <button [disabled]="!signupForm.valid" (click)="signup()" class="btn btn-primary">Зарегистрироваться
                 </button>
