--- a/webapp/src/app/pages/problem/problem.component.html
+++ b/webapp/src/app/pages/problem/problem.component.html
@@ -33,5 +33,12 @@
             </div>
             <button class="btn btn-primary" [disabled]="currentUser === null || !commentForm.valid" (click)="addComment()">Оставить комментарий</button>
         </div>
+        <div class="approve-block" (click)="approve()">
+            <button class="btn btn-primary" [disabled]="approved">
+                <i class="far fa-thumbs-up"></i>
+                <span *ngIf="!approved">Подтвердить</span>
+                <span *ngIf="approved">Подтверждено</span>
+            </button>
+        </div>
     </div>
 </div>
