--- a/webapp/src/app/pages/problem/problem.component.html
+++ b/webapp/src/app/pages/problem/problem.component.html
@@ -1,8 +1,44 @@
 <div class="problem">
+    <div class="parallax"></div>
     <div class="content">
         <span class="title">{{problem?.title}}</span>
         <div class="description">
-            {{problem?.body}}
+            {{problem?.text}}
+        </div>
+        <div id="map"></div>
+        <span class="title">Изображения с места</span>
+        <div id="carouselExampleControls" class="carousel" data-ride="carousel" data-interval="0">
+            <div class="carousel-inner">
+                <div class="carousel-item" *ngFor="let image of images, let i = index" [class.active]="i === 0">
+                    <img [src]="image" class="d-block w-50" alt="..." [class.scaled]="scaled" (click)="toggleScale()">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <span class="title">Комментарии</span>
+        <div *ngIf="comments.length" class="my-comment">
+            <app-comment *ngFor="let comment of comments" [comment]="comment"></app-comment>
+        </div>
+        <div class="left-comment">
+            <div class="form-group" [formGroup]="commentForm">
+                <label for="left-comment">Ваш комментарий</label>
+                <textarea class="form-control" id="left-comment" rows="5" formControlName="comment"></textarea>
+            </div>
+            <button class="btn btn-primary" [disabled]="currentUser === null || !commentForm.valid" (click)="addComment()">Оставить комментарий</button>
+        </div>
+        <div class="approve-block" (click)="approve()">
+            <button class="btn btn-primary" [disabled]="approved">
+                <i class="far fa-thumbs-up"></i>
+                <span *ngIf="!approved">Подтвердить</span>
+                <span *ngIf="approved">Подтверждено</span>
+            </button>
         </div>
     </div>
 </div>
