--- a/webapp/src/app/components/comment/comment.component.html
+++ b/webapp/src/app/components/comment/comment.component.html
@@ -1,3 +1,7 @@
-<p>
-  comment works!
-</p>
+<div class="jumbotron col-xs-12" >
+  <p class="lead">{{comment?.text}}</p>
+  <hr class="my-4">
+  <div class="col-xs-6">{{comment?.username}}</div>
+  <div class="col-xs-6">
+  </div>
+</div>
