--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -4,16 +4,16 @@
             <a class="nav-link" routerLink="/main" routerLinkActive="active">Главная</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Добавить проблему</a>
+            <a class="nav-link" routerLink="/add-problem" routerLinkActive="active">Сообщить о проблеме</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" *ngIf="!currentUser" routerLink="/login" routerLinkActive="active">Вход</a>
+            <a class="nav-link" *ngIf="currentUser" routerLink="/main">Профиль</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" *ngIf="currentUser" routerLink="/main" (click)="logout()">Выход</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" *ngIf="currentUser" routerLink="/main">Профиль</a>
+            <a class="nav-link" *ngIf="!currentUser" routerLink="/login" routerLinkActive="active">Вход</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" *ngIf="!currentUser" routerLink="/signup" routerLinkActive="active">Регистрация</a>
