--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -1,9 +1,20 @@
 <div class="problem-short">
+  <div class="problem-short-image">
+      <img [src]="images[0]" alt="" [routerLink]="['/problem', problem?.id]">
+  </div>
+  <div class="problem-short-body">
     <span class="problem-title"
           [routerLink]="['/problem', problem?.id]">
         {{problem?.title}}
     </span>
-    <div class="problem-description">
-        {{problem?.text}}
+    <div class="problem-short-panel">
+      <span class="like-btn"><i class="material-icons">thumb_up</i>{{problem?.likesCount}}</span>
+      <span class="dislike-btn"><i class="material-icons">thumb_down</i>{{problem?.dislikesCount}}</span>
+      <span class="comment-btn"><i class="material-icons">mode_comment</i>0</span>
+      <span class="date-place"><i class="material-icons">access_time</i>{{toLocaleDateString(problem?.createdAt)}}</span>
     </div>
+    <div class="problem-description">
+      {{problem?.text}}
+    </div>
+  </div>
 </div>
