--- a/webapp/src/app/components/problem-short/problem-short.component.scss
+++ b/webapp/src/app/components/problem-short/problem-short.component.scss
@@ -1,12 +1,69 @@
 .problem-short {
   width: 70%;
-  border-radius: 4px;
+  min-width: 400px;
   background-color: #ffffff;
   margin-top: 30px;
-  height: 150px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  padding: 10px;
+  height: 250px;
+  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.09);
   overflow: hidden;
+  display: flex;
+
+  .problem-short-image {
+    width: 40%;
+    max-width: 350px;
+    display: flex;
+    align-items: center;
+    background-image: url(http://via.placeholder.com/300);
+    background-size: cover;
+    background-position: center;
+    margin-right: 10px;
+    flex-shrink: 0;
+
+    img {
+      object-fit: cover;
+      height: 250px;
+      width: 100%;
+      cursor: pointer;
+    }
+
+  }
+  .problem-short-body {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+  }
+
+  .problem-short-panel {
+    font-size: 12px;
+    padding: 10px;
+    display: flex;
+
+    .like-btn,
+    .dislike-btn,
+    .date-place,
+    .comment-btn {
+      margin-right: 20px;
+      display: inline-flex;
+      align-items: center;
+    }
+
+    .like-btn .material-icons,
+    .dislike-btn .material-icons,
+    .comment-btn .material-icons,
+    .date-place .material-icons {
+      font-size: 16px;
+      margin-right: 5px;
+      cursor: pointer;
+      transition: all 0.2s;
+    }
+    .like-btn .material-icons:hover,
+    .dislike-btn .material-icons:hover,
+    .comment-btn .material-icons:hover {
+      opacity: 0.5;
+    }
+
+  }
 
   .problem-title {
     font-size: 20px;
