--- a/webapp/src/app/pages/add-problem/add-problem.component.html
+++ b/webapp/src/app/pages/add-problem/add-problem.component.html
@@ -1,22 +1,40 @@
 <div class="add-problem">
+    <div class="parallax"></div>
     <div class="content">
-        <form>
-            <div class="form-group">
-                <label for="title">Название проблемы</label>
-                <input type="text" class="form-control" id="title">
-            </div>
-            <div class="form-group">
-                <label for="description">Описание проблемы</label>
-                <textarea class="form-control" id="description" rows="3"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="images">Фотографии</label>
-                <input type="file" accept="image/*"
-                        (change)="onFileChanged($event)"
-                        class="form-control-file" id="images">
-            </div>
-            <div id="map"></div>
-            <button [disabled]="" class="btn btn-primary">Оставить заявку</button>
-        </form>
+        <span class="head">Заметили проблему?</span>
+        <span>Вы можете сообщить нам о проблеме вашего города</span>
+        <div class="collapse show" id="collapseExample">
+            <form [formGroup]="problemForm">
+                <div class="form-group">
+                    <label for="title">Заголовок</label>
+                    <input type="text" class="form-control" id="title" formControlName="title">
+                </div>
+                <div class="form-group">
+                    <label for="description">Ваш комментарий</label>
+                    <textarea class="form-control" id="description" rows="3" formControlName="text"></textarea>
+                </div>
+                <span>Добавить место</span>
+                <div id="map"></div>
+            </form>
+        </div>
+        <button [disabled]="!problemForm.valid"
+                *ngIf="!isDataLoaded"
+                (click)="submitForm()"
+                class="btn btn-primary"
+                data-toggle="collapse"
+                data-target="#collapseExample">Далее
+
+        </button>
+        <div class="form-group" *ngIf="isDataLoaded">
+            <label for="images">Добавьте изображения места</label>
+            <input type="file" accept="image/*"
+                   (change)="onFileChanged($event)"
+                   class="form-control-file inputfile" id="images"
+                   multiple>
+        </div>
+        <button *ngIf="isDataLoaded" class="btn btn-primary"
+                (click)="sendPhotos()">
+            Сообщить о проблеме
+        </button>
     </div>
 </div>
