--- a/webapp/src/app/pages/add-problem/add-problem.component.scss
+++ b/webapp/src/app/pages/add-problem/add-problem.component.scss
@@ -1,24 +1,62 @@
+.parallax {
+  background-image: url(/assets/images/index-bg.png);
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+
 .add-problem {
-  margin-top: 50px;
+  margin-top: 120px;
   display: flex;
   justify-content: center;
   width: 100%;
 
   .content {
-    background-color: #e5edf9;
+    background-color: #e6e6e6;
+    color: #212529a6;
     width: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
+    border: solid 8px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    box-sizing: content-box;
 
-    .form-group > input {
-      width: 400px;
+    .head {
+      font-size: 35px;
+      color: #000000;
     }
 
+    .form-group {
+      margin-top: 20px;
+
+      input {
+        width: 800px;
+        border-radius: 0;
+      }
+
+      textarea {
+        border-radius: 0;
+      }
+
+    }
     #map {
       width: 100%;
-      height: 480px;
+      height: 400px;
+      margin-bottom: 10px;
+    }
+
+    button {
+      align-self: center;
+      background-color: #9f2534;
+      border: none;
+      border-radius: 0;
     }
   }
 
