--- a/webapp/src/app/pages/problem/problem.component.scss
+++ b/webapp/src/app/pages/problem/problem.component.scss
@@ -1,16 +1,30 @@
+.parallax {
+  background-image: url(/assets/images/index-bg.png);
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+
 .problem {
-  margin-top: 50px;
+  margin-top: 120px;
   display: flex;
   justify-content: center;
   width: 100%;
 
   .content {
-    background-color: #e5edf9;
-    width: 70%;
+    background-color: #e6e6e6;
+    width: 75%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
+    border: solid 8px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
 
     .title {
       font-size: 20px;
@@ -19,6 +33,85 @@
 
     .description {
       margin-top: 20px;
+      margin-bottom: 50px;
+      word-break: break-word;
+    }
+
+    #map {
+      width: 50%;
+      height: 400px;
+      margin-bottom: 50px;
+    }
+
+    .carousel {
+      margin-bottom: 50px;
+
+      .carousel-inner {
+        overflow: visible;
+      }
+      img {
+        max-height: 250px;
+        object-fit: contain;
+        transition: all 1s ease;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      .scaled {
+        transform: scale(2,2);
+        position: relative;
+        z-index: 10;
+      }
+
+      .active {
+        display: flex;
+        justify-content: center;
+      }
+
+      a {
+        background-color: #9f2534;
+        width: 3rem;
+      }
+    }
+
+    .left-comment {
+      display: flex;
+      flex-direction: column;
+
+      textarea {
+        border-radius: 0;
+      }
+
+      button {
+        align-self: center;
+        background-color: #9f2534;
+        border: none;
+        border-radius: 0;
+      }
+      .form-control {
+        width: 550px !important;
+      }
+    }
+
+    .approve-block {
+      margin-top: 50px;
+      margin-bottom: 20px;
+      width: 100%;
+
+      button {
+        border-radius: 0;
+        font-weight: bold;
+        background-color: #42f474;
+        border: none;
+        width: 200px;
+        height: 50px;
+      }
     }
   }
+}
+
+.my-comment {
+  width: 80%;
 }
