--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -1,5 +1,10 @@
-<div class="container">
-    <ul class="nav nav-pills nav-fill">
+<div class="container navbar navbar-dark navbar-expand-lg">
+  <h2 class="d-inline-block d-lg-none">Цифровой ветер</h2>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="material-icons">menu</i>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <ul class="nav nav-pills nav-fill navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
             <a class="nav-link" routerLink="/main" routerLinkActive="active">Главная</a>
         </li>
@@ -19,4 +24,5 @@
             <a class="nav-link" *ngIf="!currentUser" routerLink="/signup" routerLinkActive="active">Регистрация</a>
         </li>
     </ul>
+  </div>
 </div>
