--- a/webapp/src/app/pages/add-problem/add-problem.component.scss
+++ b/webapp/src/app/pages/add-problem/add-problem.component.scss
@@ -28,20 +28,36 @@
     border-radius: 10px;
     box-sizing: content-box;
 
+    @media (max-width:768px) {
+      width: 100%;
+      padding: 10px 30px;
+      border: none;
+      border-radius: 0;
+      box-sizing: border-box;
+    }
+
     .head {
       font-size: 35px;
       color: #000000;
+    }
+
+    .collapse {
+      width: 100%;
+      max-width: 760px;
     }
 
     .form-group {
       margin-top: 20px;
 
       input {
-        width: 800px;
+        width: 100%;
+        max-width: 800px;
         border-radius: 0;
       }
 
       textarea {
+        width: 100%;
+        max-width: 800px;
         border-radius: 0;
       }
 
@@ -57,6 +73,7 @@
       background-color: #9f2534;
       border: none;
       border-radius: 0;
+      margin: 10px 0;
     }
   }
 
