--- a/webapp/src/app/components/problem-short/problem-short.component.html
+++ b/webapp/src/app/components/problem-short/problem-short.component.html
@@ -8,7 +8,7 @@
         {{problem?.title}}
     </span>
     <div class="problem-short-panel">
-      <span class="like-btn"><i class="material-icons">thumb_up</i>{{problem?.likesCount}}</span>
+      <span class="like-btn liked"><i class="material-icons">thumb_up</i>{{problem?.likesCount}}</span>
       <span class="dislike-btn"><i class="material-icons">thumb_down</i>{{problem?.dislikesCount}}</span>
       <span class="comment-btn"><i class="material-icons">mode_comment</i>0</span>
       <span class="date-place"><i class="material-icons">access_time</i>{{toLocaleDateString(problem?.createdAt)}}</span>
