--- a/webapp/src/app/pages/problem/problem.component.scss
+++ b/webapp/src/app/pages/problem/problem.component.scss
@@ -99,6 +99,9 @@
       margin-top: 50px;
       margin-bottom: 20px;
       width: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
 
       button {
         border-radius: 0;
