coool design, i know

--- a/webapp/src/app/components/header/header.component.html
+++ b/webapp/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="container navbar navbar-dark navbar-expand-lg">
-  <h2 class="d-inline-block d-lg-none">Цифровой ветер</h2>
+  <h5 class="d-inline-block d-lg-none">Цифровой город</h5>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <i class="material-icons">menu</i>
   </button>
