--- a/webapp/src/app/components/header/header.component.scss
+++ b/webapp/src/app/components/header/header.component.scss
@@ -1,29 +1,33 @@
 .container {
   z-index: 999;
-  position: fixed;
+  //position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background-color: rgba(0,0,0,0.9);
   max-width: unset;
-  height: 100px;
+  height: 80px;
   padding: 0;
   display: flex;
   align-items: center;
 
   @media (max-width: 992px) {
     display: block;
-    padding-top: 30px;
+    height: 56px;
+    //padding-top: 30px;
+    text-transform: uppercase;
   }
 
-  h2 {
-    color: white;
+  h5 {
     padding-left: 20px;
+    color: white;
+    line-height: 56px;
+    margin: 0;
   }
 
   .navbar-toggler {
     float: right;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-right: 20px;
   }
 
@@ -31,9 +35,9 @@
     padding: 30px;
     @media(max-width:992px) {
       text-align: center;
-      padding: 0 30px 20px 30px;
+      padding: 20px 30px 20px 30px;
       background: inherit;
-      margin: 24px 0 0;
+      margin: 0 0;
     }
   }
 
