--- a/webapp/src/app/components/problem-short/problem-short.component.scss
+++ b/webapp/src/app/components/problem-short/problem-short.component.scss
@@ -5,7 +5,8 @@
   margin-top: 30px;
   height: 250px;
   box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.09);
-  overflow: hidden;
+  //overflow: hidden;
+  word-break: break-all;
   display: flex;
 
   .problem-short-image {
@@ -31,7 +32,7 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    flex-shrink: 0;
+    min-width: 50%;
   }
 
   .problem-short-panel {
@@ -76,5 +77,6 @@
 
   .problem-description {
     text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
