--- a/webapp/src/app/pages/add-problem/add-problem.component.scss
+++ b/webapp/src/app/pages/add-problem/add-problem.component.scss
@@ -11,7 +11,7 @@
 }
 
 .add-problem {
-  margin-top: 120px;
+  //margin-top: 120px;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -20,6 +20,7 @@
     background-color: #e6e6e6;
     color: #212529a6;
     width: 70%;
+    max-width: 900px;
     display: flex;
     flex-direction: column;
     align-items: center;
