--- a/webapp/src/app/pages/main/main.component.html
+++ b/webapp/src/app/pages/main/main.component.html
@@ -3,7 +3,7 @@
   <div class="main-inner">
     <div class="slide">
       <div class="title-text">
-        Вместе<br>Сделаем Город<br>Лучше!<br>
+        цифровой<br>ветер
         <!--<a href="/add-problem" class="btn btn-primary">Сообщить о проблеме</a>-->
       </div>
     </div>
