--- a/webapp/src/app/pages/signup/signup.component.scss
+++ b/webapp/src/app/pages/signup/signup.component.scss
@@ -11,10 +11,11 @@
 }
 
 .signup {
-  margin-top: 120px;
+  //margin-top: 120px;
   display: flex;
   justify-content: center;
   width: 100%;
+  box-sizing: border-box;
 
   .header {
     color: #FFFFFF;
@@ -36,7 +37,7 @@
     border: solid 8px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     flex-grow: 0;
-    width: 40%;
+    width: 48%;
 
     @media(max-width:768px) {
       flex-grow: 1;
@@ -52,6 +53,7 @@
 
       @media (max-width: 768px) {
         width: 100%;
+        padding: 10px;
       }
 
       input {
